bug 245770 : add a pref. to control whether or not replace backslashes with Yen signs in Japanese documents (r=smontagu, sr=dbaron)