layout/base/src/nsPresContext.h
@@ -126,6 +126,8 @@ protected:
 
   nsSupportsHashtable   mImageLoaders;
 
+  PRBool                mEnableJapaneseTransform;
+
 #ifdef IBMBIDI
   nsBidiPresUtils*      mBidiUtils;
   PRUint32              mBidi;
